# ChangeLog for media-gfx/DFBPoint
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/DFBPoint/ChangeLog,v 1.17 2012/05/05 07:00:26 jdhore Exp $

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> DFBPoint-0.7.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  25 Sep 2009; Jeroen Roovers <jer@gentoo.org> DFBPoint-0.7.2.ebuild:
  Fix HOMEPAGE.

  29 Jul 2009; Víctor Ostorga <vostorga@gentoo.org> DFBPoint-0.7.2.ebuild:
  Fixing DEPENDS and RDEPENDS, closes bug #232420

  21 Apr 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Fix up metadata.xml. If there's no maintainer for the package, the metadata
  also needs to contain m-needed@g.o.

  20 Apr 2008; Markus Meier <maekke@gentoo.org> DFBPoint-0.7.2.ebuild:
  pkgconfig should not be in RDEPEND, bug #217278

  16 Jan 2008; Raúl Porcel <armin76@gentoo.org> DFBPoint-0.7.2.ebuild:
  Add missing pkgconfig DEPEND, bug #205855

  04 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  10 Aug 2005; Luis Medinas <metalgod@gentoo.org> DFBPoint-0.7.2.ebuild:
  Marked Testing on AMD64.

  21 Jul 2004; Michael Sterrett <mr_bones_@gentoo.org> DFBPoint-0.7.2.ebuild:
  tidy; error check cp

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  DFBPoint-0.7.2.ebuild:
  virtual/glibc -> virtual/libc

  02 Jan 2004; Sven Blumenstein <bazik@gentoo.org> DFBPoint-0.7.2.ebuild:
  Masked on sparc as DEPEND dev-libs/DirectFB is -sparc.

  09 Oct 2003; Brandy Westcott brandy@gentoo.org DFBPoint-0.7.2.ebuild,
  metadata.xml:
  Changed virtual/x11 dependency to virtual/glibc. We don't need X for DFBPoint.

  12 Jun 2003; <msterret@gentoo.org> DFBPoint-0.7.2.ebuild:
  add Header

*DFBPoint-0.7.2 (12 Jun 2002)

  12 Jun 2002; M.Nazaroff <naz@gentoo.org>  DFBPoint-0.7.2.ebuild: 
  This is the initial release of DFBPoint ebuild for portage, this program is a
  DirectFB presentation program.