@@ -1,4 +1,14 @@
-DIST DFBPoint-0.7.2.tar.gz 536190 RMD160 2c90d1b5bcf5321edcce98b03d87a25e21c5f723 SHA1 48166fe3d5381325364421d4146701fd5b1d8fa6 SHA256 0518773b8aceca0f105a01c70480951c1b6ee173d85db31f9168d3c4173df325
-EBUILD DFBPoint-0.7.2.ebuild 1052 RMD160 b940ece717f10d54621c362fb415aaac162c72b9 SHA1 9d25bd721522a02176844caf19d927ea48ba1910 SHA256 92d9ee47fe40981d18519d92b1f849b3d90064300d786da1800e6e2bb0e3832e
-MISC ChangeLog 1971 RMD160 c08390b14e2c48efd2ee1b955378cad424576ddf SHA1 888582f5ef994265aceadbaa5eeef6ef4b69af3d SHA256 5840c90f82703e516ee4e82e38d9b54b674164ecfab3f81da391d1e36fdf732a
-MISC metadata.xml 268 RMD160 01696164cd82ae0617304a419940adecf5a9d222 SHA1 b52a9b90dd049bc8749bc0d25cdfddebd447860f SHA256 2089ca59285b2836a6ec1d5aef27f83d580e922212301f0b1eadb04400eb45eb
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST DFBPoint-0.7.2.tar.gz 536190 SHA256 0518773b8aceca0f105a01c70480951c1b6ee173d85db31f9168d3c4173df325 SHA512 f1e256a40adfa9397a07730eb53c6239ea26615a789337d93f02ed85b16750768634398ed4e3da36cde7192b8fc34a87ccbe0e85f394a586da18d8f982e3b304 WHIRLPOOL ee24222a262c6495cf6c14c75e6131a2d4d970688165d017026f4810bb92a28ab738a1e9bfcacd7e34120ed05998f2deddddf7572de01a0dcdc75ea658752af2
+EBUILD DFBPoint-0.7.2.ebuild 1009 SHA256 ba81ddd29ed8b0fd2f0aaba353307285d5270d20a4c7e4cbaf6aaa933f68240b SHA512 837ff2098a7a892dbfa8d60845afe351466bd3d6a26728dca5e1bb17768846bc76421e5f2fb7508e7e7401de7000694029e08767095d3a77340fad7277bb6dc5 WHIRLPOOL a952efaebf8eedf3e6a0151b4ad78f4a66d1271e62a60cc3eb3eb0bddf1f7b38fe66851fa2f9180097e48eb04547a8946f9d85747b0bb56e1600f5bdcb080c8a
+MISC ChangeLog 2089 SHA256 c311fcacfeaa036daf29511d27a8ffccac276fa2bd3b696d485414f4ad85a32d SHA512 4783b9f302d482168e34879d8f8e357e3e96227e3e5abf569a3d5ed3ab9a278f10ed62e05cbe2dbc3e5ea898ea3a4b80c59f8a5271886e34e497e626c04b6f5a WHIRLPOOL a3336114952693ce9e1865cae30b5d66c2b93ea5cf7245c1d4507ed270e4c238a9e0dc6f83d25453cdb5803ba7ef980bc3589eece3973d541e64c709eb599f11
+MISC metadata.xml 268 SHA256 2089ca59285b2836a6ec1d5aef27f83d580e922212301f0b1eadb04400eb45eb SHA512 8e365ead118785104bc7576a48a106346ef24f5b709349f8ca3d5fb9107a248d0f172e6898fb4ba4b2b7f84e6c8c7960578a2919e1a3692664cb808b16e6b2b2 WHIRLPOOL 255e754b42ff038b07a48321ced9fe6f8acdc99bb85873807b3e902517a1764dabc7152e5ca9ad4d83ab5dc9d3a611f79e6c066121be77aed3cad1b0f3587b73
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.22 (GNU/Linux)
+
+iEYEAREIAAYFAlOmpH4ACgkQCaWpQKGI+9TtBwCeJ9ZVFD9Fmosn0KYF68GF88cj
+gWwAn20OwppHDzS5XfLdydD60gocmrip
+=pJ3i
+-----END PGP SIGNATURE-----
