@@ -1,10 +1,12 @@
-DEFINED_PHASES=install
-DEPEND=virtual/pkgconfig dev-libs/DirectFB >=dev-libs/glib-2
+DEFINED_PHASES=install prepare
+DEPEND=dev-libs/DirectFB >=dev-libs/glib-2:2 >=dev-libs/glib-2 >=sys-apps/sed-4
 DESCRIPTION=DFBPoint is presentation program based on DirectFB
+EAPI=5
 HOMEPAGE=http://www.directfb.org/index.php?path=Projects%2FDFBPoint
 KEYWORDS=~amd64 -sparc x86
 LICENSE=GPL-2
-RDEPEND=dev-libs/DirectFB >=dev-libs/glib-2
+RDEPEND=dev-libs/DirectFB >=dev-libs/glib-2:2
 SLOT=0
 SRC_URI=http://www.directfb.org/download/DFBPoint/DFBPoint-0.7.2.tar.gz
-_md5_=a1afbb4be05c74de9f9a66a660e7f1db
+_eclasses_=gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	multilib	fac675dcccf94392371a6abee62d909f	toolchain-funcs	48b38a216afb92db6314d6c3187abea3
+_md5_=4c73d032f0c86aa656b41ee506012894
